--- a/public/css/components/button.css
+++ b/public/css/components/button.css
@@ -1,15 +1,24 @@
-/**
- * @file
- * Visual styles for buttons.
- */
-
-.button,
 .image-button {
   margin-right: 1em;
   margin-left: 1em;
 }
-.button:first-child,
 .image-button:first-child {
   margin-right: 0;
   margin-left: 0;
+}
+
+.button {
+  padding: 15px 25px;
+  border: 1px solid #ffffff1a;
+  border-radius: 70px;
+  background: transparent;
+  font-size: 17px;
+  font-weight: 30px;
+  font-weight: 600;
+  font-family: "Poppins", sans-serif;
+  letter-spacing: 0px;
+  color: #ffffff;
+}
+.btn-primary {
+  background: transparent linear-gradient(195deg, #8369F4 0%, #F039E2 100%) 0% 0% no-repeat padding-box;
 }
