--- a/public/css/style-dark.css
+++ b/public/css/style-dark.css
@@ -3374,6 +3374,7 @@ body {
   line-height: 1.8;
   text-transform: capitalize;
   margin-bottom: 10px;
+  margin-top: 17px !important;
 }
 .services .rone > div {
   position: relative;
