--- a/public/css/components/button.css
+++ b/public/css/components/button.css
@@ -8,17 +8,41 @@
 }
 
 .button {
-  padding: 15px 25px;
-  border: 1px solid #ffffff1a;
+  padding: 12px 30px;
+  border: 1px solid #ffffff1a !important;
   border-radius: 70px;
   background: transparent;
-  font-size: 17px;
-  font-weight: 30px;
-  font-weight: 600;
+  font-size: 13px;
+  font-weight: 500;
   font-family: "Poppins", sans-serif;
   letter-spacing: 0px;
   color: #ffffff;
+  position: relative;
+  overflow: hidden;
+   -webkit-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  transition: all 0.5s;
+}
+.button:hover:after {
+  width: 50px;
+  height: 50px;
+  -webkit-transform: scale(10);
+  -ms-transform: scale(10);
+  transform: scale(10);
+}
+.button:after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  background: #fff;
+  opacity: 0.3;
+  border-radius: 50%;
+  -webkit-transition: all 0.5s cubic-bezier(1, 0, 0, 1);
+  -o-transition: all 0.5s cubic-bezier(1, 0, 0, 1);
+  transition: all 0.5s cubic-bezier(1, 0, 0, 1);
 }
 .btn-primary {
-  background: transparent linear-gradient(195deg, #8369F4 0%, #F039E2 100%) 0% 0% no-repeat padding-box;
+  background: transparent linear-gradient(195deg, #8369f4 0%, #f039e2 100%) 0%
+    0% no-repeat padding-box;
 }
