Implement artist dashboard

--- a/public/css/components.css
+++ b/public/css/components.css
@@ -2,3 +2,4 @@
 @import url('./components/hidden.module.css');
 @import url('./components/clearfix.module.css');
 @import url('./components/align.module.css');
+@import url('./components/ui-dialog.css');
