--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,97 +2,81 @@
   width: 750px;
   max-width: 98%;
 }
-.stateless-slide {
+.hero-head {
   position: relative;
   padding: 0;
   z-index: 1;
-  display: flex;
+  overflow: hidden;
   box-sizing: content-box;
-  min-height: 100vh;
-  flex-shrink: 0;
+  min-height: 80vh;
 }
-.stateless-slide .caption h1 span {
-    display: block;
-  }
-@media screen and (max-width: 991px) {
-  .bg-img {
-    background-position: left !important;
-  }
-}
-.stateless-bg {
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 50%;
-  background-image: url(../img/bg-xnsh.png);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
+.hero-head .overlay {
+  background: rgb(12, 15, 21);
+  background: linear-gradient(
+    76deg,
+    rgba(12, 15, 21, 1) 0%,
+    rgb(14, 15, 20) 68%,
+    rgba(23, 25, 34, 0.8) 100%
+  );
+  width: 38%;
   height: 100%;
+  position: absolute;
+  z-index: 1;
+  filter: blur(30px);
+  -webkit-filter: blur(30px);
+  -moz-filter: blur(30px);
+  -ms-filter: blur(30px);
+  -o-filter: blur(30px);
+  transform: scale(1.6);
 }
-.stateless-slide .container {
+.hero-head video.fullscreen {
+  position: absolute;
+  z-index: 0;
+  object-fit: cover;
+  width: 80%;
+  height: 100%;
+  top: 80%;
+  right: 60%;
+  transform: translate(80%, -80%);
+}
+.hero-head video.fullscreen::-webkit-media-controls {
+  display: none !important;
+}
+.hero-head .hero-content {
   position: relative;
   z-index: 2;
 }
-.stateless-slide .caption h1 {
+.hero-head .hero-content h1 {
   font-family: "Archivo Black", sans-serif;
-  font-size: 70px;
+  font-size: 63px;
   font-weight: 700;
   line-height: 71px;
   letter-spacing: 1px;
   color: #fff;
 }
-.stateless-slide .caption p {
+.hero-head .caption h1 span {
+  display: block;
+}
+.hero-head .hero-content p {
   color: #eee;
+  font-size: 15px;
+  font-weight: 500;
   -webkit-transition: all 0.4s;
   -o-transition: all 0.4s;
   transition: all 0.4s;
 }
-@media (max-width: 550px) {
-  .stateless-bg {
-    display: none;
-  }
-  .stateless-slide .caption h1 span {
-    display: inline-block;
-  }
-  .stateless-slide {
-    background-image: url(../img/bg-xnsh.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-  }
-  .stateless-slide:before {
-    content: "";
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: rgba(0, 0, 0, 0.79);
-  }
-  .stateless-slide .caption h1 {
-    font-size: 58px;
-    font-weight: 700;
-    line-height: 60px;
-  }
-}
-@media (max-width: 380px) {
-  .stateless-slide .caption h1 {
-    font-size: 58px;
-    line-height: 60px;
-  }
-}
-.stateless-slide .social-icon {
+
+.hero-head .social-icon {
   position: absolute;
-  left: 40px;
-  bottom: 50px;
-  z-index: 8;
+  right: 40px;
+  z-index: 1;
 }
-.stateless-slide .social-icon img, .footer-half .cont .social-icon .social img {
+.hero-head .social-icon img,
+.footer-half .cont .social-icon .social img {
   width: 16px;
   height: 13px;
 }
-.stateless-slide .social-icon a {
+.hero-head .social-icon a {
   width: 40px;
   height: 40px;
   line-height: 40px;
@@ -101,4 +85,59 @@
   border: 1px solid rgba(255, 255, 255, 0.05);
   color: #fff;
   font-size: 13px;
+  -webkit-transition: all 0.7s cubic-bezier(1, 0, 0.55, 1);
+  -o-transition: all 0.7s cubic-bezier(1, 0, 0.55, 1);
+  transition: all 0.7s cubic-bezier(1, 0, 0.55, 1);
+}
+.hero-head .social-icon a:hover {
+  transform: scale(1.3);
+}
+.hero-head .social-icon a + a {
+  margin-left: 8px;
+}
+.powered-section * + * {
+  margin-left: 10px;
+}
+.powered-section img {
+  width: 70px;
+  height: 28px;
+}
+@media (max-width: 990px) {
+  .hero-head {
+    padding-bottom: 25px;
+  }
+}
+@media (max-width: 600px) {
+  .hero-head .hero-content h1 {
+    font-size: 46px;
+    font-weight: 700;
+    line-height: 60px;
+  }
+}
+@media (max-width: 540px) {
+  .hero-head .overlay {
+    background: rgb(12, 15, 21);
+    opacity: 0.6;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 1;
+  }
+
+  .hero-head video.fullscreen {
+    position: absolute;
+    z-index: 0;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    top: 50%;
+    right: 50%;
+    transform: translate(50%, -50%);
+  }
+  .hero-head .social-icon {
+    position: relative;
+    right: auto;
+    z-index: 1;
+    margin-top: 40px;
+  }
 }
