fix autoprefixer issue

--- a/src/assets/css/style-dark.css
+++ b/src/assets/css/style-dark.css
@@ -3930,7 +3930,7 @@ body {
   display: flex;
   -webkit-box-pack: start;
   -ms-flex-pack: center;
-  justify-content: start;
+  justify-content: flex-start;
   -webkit-box-align: start;
   -ms-flex-align: start;
   align-items: flex-end;
