Make waitlist dialog interactive

--- a/src/assets/css/components/button.css
+++ b/src/assets/css/components/button.css
@@ -19,7 +19,7 @@
   color: #ffffff;
   position: relative;
   overflow: hidden;
-   -webkit-transition: all 0.7s;
+  -webkit-transition: all 0.7s;
   -o-transition: all 0.7s;
   transition: all 0.7s;
 }
@@ -42,10 +42,13 @@
   -o-transition: all 0.5s cubic-bezier(1, 0, 0, 1);
   transition: all 0.5s cubic-bezier(1, 0, 0, 1);
 }
+.button .fa-spinner {
+  font-size: 20px;
+}
 .btn-primary {
   background: transparent linear-gradient(195deg, #8369f4 0%, #f039e2 100%) 0%
     0% no-repeat padding-box;
 }
 .btn-accent {
-  background: #8369F4;
+  background: #8369f4;
 }
