--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -14,13 +14,19 @@
 .x-modal .modal-header {
   border-radius: 0;
   border: 0;
+  position: relative;
 }
 .x-modal .modal-header .close {
+  position: absolute;
+  top: 30px;
+  right: 40px;
   font-weight: 100;
+  font-size: 1.8rem;
   line-height: 1;
   color: #fff;
   text-shadow: 0 1px 0 rgb(236, 232, 232);
   opacity: 1;
+  margin-right: 1rem;
 }
 
 .x-modal .modal-header button.close:focus {
