--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -27,6 +27,7 @@
   text-shadow: 0 1px 0 rgb(236, 232, 232);
   opacity: 1;
   margin-right: 1rem;
+  z-index: 1;
 }
 
 .x-modal .modal-header button.close:focus {
