--- a/public/css/style-dark.css
+++ b/public/css/style-dark.css
@@ -3947,7 +3947,7 @@ body {
   justify-content: flex-start;
   -webkit-box-align: start;
   -ms-flex-align: start;
-  align-items: flex-end;
+  align-items: flex-start;
 }
 
 .work-carousel .noraidus .cont {
