--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .active-tab {
+    @apply text-white font-semibold before:w-full before:h-0.5 before:absolute relative before:bg-accent before:bottom-0 before:left-0 before:right-[50%];
+  }
+  .pointer {
+    @apply relative before:bg-muted before:w-1 before:h-1 before:absolute before:left-0 before:top-1.5 before:rounded-full;
+  }
+  .card {
+    @apply rounded-2xl border border-grey-blur-20;
+  }
+}
