--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,15 @@
     @apply rounded-2xl border border-grey-blur-20;
   }
 }
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
