Implement authentication feature

--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,7 @@ input::-webkit-inner-spin-button {
 input[type="number"] {
   -moz-appearance: textfield;
 }
+
+button:disabled {
+    opacity: 0.6;
+}
