--- a/src/index.css
+++ b/src/index.css
@@ -32,5 +32,20 @@ input[type="number"] {
 }
 
 button:disabled {
-    opacity: 0.6;
+  opacity: 0.6;
+}
+
+.fullpage-loader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  background-color: rgba(255, 255, 255, 0.6);
+}
+.fullpage-loader div {
+  color: #fff;
+  mix-blend-mode: difference;
+  font-size: 21px;
 }
