--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,10 @@ input[type="number"] {
   -moz-appearance: textfield;
 }
 
+.input-name:focus {
+  box-shadow:0 0 0 10px transparent;
+}
+
 button:disabled {
   opacity: 0.6;
 }
@@ -70,4 +74,46 @@ button:disabled {
 }
 .pointer-cursor {
   cursor: pointer;
+}
+ 
+.scroll_event::-webkit-scrollbar {
+  display: none;
+  scroll-behavior: smooth;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.scroll_event {
+-ms-overflow-style: none;  /* IE and Edge */
+scrollbar-width: none;  /* Firefox */
+transition: transform 0.3s ease-out;
+scroll-behavior: smooth;
+}
+
+html{  
+  scroll-behavior: smooth; 
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+} 
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: transparent;
+  border-radius: 25%;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  
+}
+
+div:hover::-webkit-scrollbar-thumb {
+  background-color: #10141C;
 }
