update on landing page

--- a/src/index.css
+++ b/src/index.css
@@ -164,3 +164,9 @@ input.lower { text-transform: uppercase; }
   transform: translateX(-100%); 
   }
 }
+
+#gradenttext {  
+  background: linear-gradient(255.45deg, #8369F4 39.69%, #F039E2 65.08%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
