update on landing page

--- a/public/css/style-dark.css
+++ b/public/css/style-dark.css
@@ -5410,6 +5410,16 @@ iframe {
   box-sizing: content-box;
   min-height: 80vh;
 }
+
+.hero-head-mobile {
+  position: relative;
+  padding: 0;
+  z-index: 1;
+  overflow: hidden;
+  box-sizing: content-box;
+  min-height: 70vh;
+}
+
 .hero-head .overlay {
   background: rgb(12, 15, 21);
   background: linear-gradient(
@@ -5539,8 +5549,8 @@ iframe {
     bottom: auto;
     z-index: 1;
     margin-top: 40px;
-    margin-left: -25px;
-    margin-right: -25px;
+    margin-left: -16px;
+    margin-right: -16px;
   }
 }
 @media (max-width: 600px) {
