--- a/src/mystyle.scss
+++ b/src/mystyle.scss
@@ -9,7 +9,7 @@ $color-3: linear-gradient(265.1deg, #8369F4 34.76%, #F039E2 87.26%);
 /* Fonts */
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300,700);
 body {
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Open Sans', 'Poppins', Helvetica, Arial, sans-serif;
   font-size: 1em;
   font-weight: 300;
   line-height: 1.5;
